fixed overflow on template page

--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -38,7 +38,7 @@
     padding: 3rem 0 0 0;
   }
   .entry-content {
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 }
 
